--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             overflow-x: hidden;
         }
 
-        /* 無限スクロール：速度をわずかに落として視認性を向上 */
+        /* 無限スクロール：速度を落とし、浮遊感を抑えて落ち着かせる */
         @keyframes scroll {
             0% { transform: translateX(0); }
             100% { transform: translateX(-50%); }
@@ -30,8 +30,8 @@
         .slider-track {
             display: flex;
             align-items: center;
-            /* スピード：18秒（速すぎず遅すぎない絶妙な流れ） */
-            animation: scroll 18s linear infinite;
+            /* スピード：22秒（少し重みを持たせる） */
+            animation: scroll 22s linear infinite;
             will-change: transform;
             width: max-content;
         }
@@ -42,16 +42,16 @@
 
         .slide-item {
             width: 260px; 
-            padding: 0 12px;
+            padding: 0 10px;
             flex-shrink: 0;
-            /* 動きを「ヌルヌル」から「吸い付くような洗練された動き」へ (Expo Out) */
-            transition: width 0.8s cubic-bezier(0.16, 1, 0.3, 1);
+            /* ヌルヌル感を抑えるため、時間を短縮し、よりダイレクトな曲線 (Quart Out) へ変更 */
+            transition: width 0.5s cubic-bezier(0.25, 1, 0.5, 1);
             cursor: pointer;
         }
 
-        /* ホバー時の拡大サイズを適切に調整 (600px -> 460px) */
+        /* ホバー時の拡大サイズ */
         .slide-item:hover {
-            width: 460px; 
+            width: 440px; 
         }
 
         .artist-card {
@@ -61,32 +61,32 @@
             border-radius: 2px;
             overflow: hidden;
             position: relative;
-            background: #0f0f0f;
-            /* 微細な枠線で高級感を演出 */
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            background: #0d0d0d;
+            border: 1px solid rgba(255, 255, 255, 0.03);
         }
 
         .artist-card img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: transform 1.2s cubic-bezier(0.16, 1, 0.3, 1);
+            /* 画像の拡大もよりキレのある動きに */
+            transition: transform 0.6s cubic-bezier(0.25, 1, 0.5, 1);
         }
 
         .slide-item:hover img {
-            transform: scale(1.08);
+            transform: scale(1.05);
         }
 
-        /* 文字情報：ミニマルなデザインへ */
+        /* 文字情報：表示の遅延をなくし、パッと出る印象に */
         .artist-info {
             position: absolute;
             inset: 0;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
-            padding: 40px;
+            padding: 35px;
             opacity: 0;
-            transition: opacity 0.5s ease;
+            transition: opacity 0.3s ease;
             pointer-events: none;
             z-index: 10;
         }
@@ -96,17 +96,16 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 60%;
-            /* より深いグラデーション */
-            background: linear-gradient(to top, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.6) 40%, transparent 100%);
+            height: 55%;
+            background: linear-gradient(to top, rgba(0,0,0,0.9) 0%, rgba(0,0,0,0.4) 70%, transparent 100%);
             z-index: 1;
         }
 
         .info-content {
             position: relative;
             z-index: 2;
-            transform: translateY(15px);
-            transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+            transform: translateY(10px);
+            transition: transform 0.4s cubic-bezier(0.25, 1, 0.5, 1);
         }
 
         .slide-item:hover .artist-info {
@@ -118,14 +117,14 @@
         }
 
         .sns-link {
-            font-size: 0.75rem;
-            color: rgba(255, 255, 255, 0.5);
+            font-size: 0.7rem;
+            color: rgba(255, 255, 255, 0.4);
             text-decoration: none;
             display: inline-block;
-            margin-right: 15px;
+            margin-right: 12px;
             margin-top: 8px;
-            letter-spacing: 0.1em;
-            transition: color 0.3s;
+            letter-spacing: 0.15em;
+            transition: color 0.2s;
             pointer-events: auto;
         }
 
@@ -138,30 +137,29 @@
         }
 
         .text-outline {
-            -webkit-text-stroke: 1px rgba(255,255,255,0.2);
+            -webkit-text-stroke: 1px rgba(255,255,255,0.15);
             color: transparent;
         }
 
-        /* スタイリッシュな装飾ライン */
         .accent-line {
-            width: 20px;
-            height: 1px;
+            width: 15px;
+            height: 2px;
             background: #fff;
-            margin-bottom: 15px;
-            transition: width 0.8s cubic-bezier(0.16, 1, 0.3, 1);
+            margin-bottom: 12px;
+            transition: width 0.5s cubic-bezier(0.25, 1, 0.5, 1);
         }
 
         .slide-item:hover .accent-line {
-            width: 40px;
+            width: 30px;
         }
     </style>
 </head>
 <body>
 
     <nav class="fixed top-0 w-full z-50 bg-black/80 backdrop-blur-xl border-b border-white/5">
-        <div class="max-w-7xl mx-auto px-6 py-6 flex justify-between items-center">
-            <div class="text-xl font-black tracking-[0.2em] uppercase">Crew.</div>
-            <div class="hidden md:flex space-x-12 text-[9px] font-bold tracking-[0.4em] uppercase opacity-60">
+        <div class="max-w-7xl mx-auto px-6 py-5 flex justify-between items-center">
+            <div class="text-xl font-black tracking-[0.2em] uppercase italic">Crew.</div>
+            <div class="hidden md:flex space-x-12 text-[9px] font-bold tracking-[0.4em] uppercase opacity-40">
                 <a href="#hero" class="hover:opacity-100 transition">Top</a>
                 <a href="#members" class="hover:opacity-100 transition">Members</a>
                 <a href="#contact" class="hover:opacity-100 transition">Contact</a>
@@ -171,19 +169,18 @@
 
     <section id="hero" class="h-screen flex items-center justify-center relative px-6">
         <div class="text-center z-10">
-            <h1 class="text-7xl md:text-[10rem] font-black mb-0 tracking-tighter leading-[0.85] italic uppercase">
-                Artistic<br><span class="text-outline">Impact.</span>
+            <h1 class="text-7xl md:text-[9rem] font-black mb-0 tracking-tighter leading-[0.85] italic uppercase">
+                Raw<br><span class="text-outline">Motion.</span>
             </h1>
-            <p class="mt-10 text-zinc-600 max-w-lg mx-auto text-[10px] tracking-[0.5em] uppercase font-bold">
-                Premium Creative Unit / Tokyo Based
+            <p class="mt-8 text-zinc-700 max-w-lg mx-auto text-[9px] tracking-[0.6em] uppercase font-black">
+                Tokyo / Creative Collective
             </p>
         </div>
     </section>
 
-    <section id="members" class="py-24 bg-black overflow-hidden">
-        <div class="max-w-7xl mx-auto px-6 mb-12 flex flex-col">
-            <span class="text-zinc-800 text-xs font-bold uppercase tracking-[0.6em] mb-2">Portfolio</span>
-            <h2 class="text-5xl font-black uppercase tracking-tighter italic">Members</h2>
+    <section id="members" class="py-20 bg-black overflow-hidden">
+        <div class="max-w-7xl mx-auto px-6 mb-10">
+            <h2 class="text-4xl font-black uppercase tracking-tighter italic border-l-4 border-white pl-4">Archive.</h2>
         </div>
 
         <div class="slider-container">
@@ -193,15 +190,15 @@
         </div>
     </section>
 
-    <section id="contact" class="py-48 px-6 max-w-4xl mx-auto text-center">
-        <span class="text-[9px] font-bold tracking-[0.6em] text-zinc-700 block mb-12 uppercase">Inquiry</span>
-        <a href="mailto:contact@crew.xyz" class="text-3xl md:text-6xl font-black hover:text-zinc-500 transition italic uppercase tracking-tighter">
+    <section id="contact" class="py-40 px-6 max-w-4xl mx-auto text-center">
+        <span class="text-[8px] font-bold tracking-[0.8em] text-zinc-800 block mb-8 uppercase">Connection</span>
+        <a href="mailto:contact@crew.xyz" class="text-2xl md:text-5xl font-black hover:text-zinc-600 transition italic uppercase tracking-tighter">
             hello@crew.xyz
         </a>
     </section>
 
-    <footer class="py-20 px-6 text-center text-zinc-900 text-[8px] tracking-[0.6em] uppercase font-black">
-        <p>&copy; 2024 CREATIVE CREW.</p>
+    <footer class="py-16 px-6 text-center text-zinc-900 text-[8px] tracking-[0.6em] uppercase font-black">
+        <p>&copy; 2024-2025 CREATIVE CREW.</p>
     </footer>
 
     <script>
@@ -264,11 +261,11 @@
                             <div class="info-content">
                                 <div class="accent-line"></div>
                                 <h3 class="text-4xl font-black italic tracking-tighter leading-none mb-2">${member.name}</h3>
-                                <p class="text-[9px] font-bold text-zinc-400 uppercase tracking-[0.3em] mb-5">${member.role}</p>
+                                <p class="text-[9px] font-bold text-zinc-500 uppercase tracking-[0.2em] mb-4">${member.role}</p>
                                 
-                                <div class="flex items-center">
-                                    <a href="#" class="sns-link">INSTAGRAM</a>
-                                    <span class="text-[8px] text-zinc-600 tracking-widest font-bold uppercase">BORN ${member.birthday}</span>
+                                <div class="flex items-center gap-4">
+                                    <a href="#" class="sns-link">IG: ${member.ig}</a>
+                                    <span class="text-[8px] text-zinc-700 tracking-widest font-black uppercase">${member.birthday}</span>
                                 </div>
                             </div>
                         </div>
@@ -278,7 +275,7 @@
             });
         }
 
-        // 無限ループ用にデータを複製
+        // シームレスループ用に2セット生成
         generateContent(members);
         generateContent(members);
 
