--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -46,7 +46,7 @@
         </header>
 
         <div class="hero-image">
-            <img src="assets/images/mcpclogo.svg" alt="mcpc logo">
+            <img src="./assets/images/mcpclogo.svg" alt="mcpc logo">
         </div>
     </section>
 
@@ -72,11 +72,11 @@
                 </p>
             </div>
 
-            <img src="assets/images/mcpclogo.svg" alt="mcpc logo" class="comingsoon-logo">
+            <img src="./assets/images/mcpclogo.svg" alt="mcpc logo" class="comingsoon-logo">
         </div>
 
         <div class="comingsoon-kvimage">
-            <img src="assets/images/kv_image.jpg" alt="mcpc key visual" class="comingsoon-kvimage">
+            <img src="./assets/images/kv_image.jpg" alt="mcpc key visual" class="comingsoon-kvimage">
         </div>
     </section>
     <footer>
