--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -80,13 +80,29 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="footer-social-links" aria-label="Social links">
             <li>
-                <a href=""><i class="fa-brands fa-instagram fa-2xs" style="color: #ec2222;"></i></a>
+                <a href="https://www.instagram.com/mcpc__official/" target="_blank">
+                    <i class="fa-brands fa-instagram fa-2xl"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/@mcpc__official" target="_blank">
+                    <i class="fa-brands fa-youtube fa-2xl"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.tiktok.com/@mcpcofficial?lang=en" target="_blank">
+                    <i class="fa-brands fa-tiktok fa-2xl"></i>
+                </a>
+            </li>
+            <li>
+                <a href="mailto:mcpc0927@gmail.com">
+                    <i class="fa-regular fa-envelope fa-2xl"></i>
+                </a>
             </li>
         </ul>
     </footer>
-
     <script src="assets/main.js"></script>
 </body>
 </html>
