--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -6,7 +6,7 @@
     <title>mcpc official site | Coming Soon</title>
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <section class="hero">
@@ -103,6 +103,6 @@
             </li>
         </ul>
     </footer>
-    <script src="assets/main.js"></script>
+    <script src="./assets/main.js"></script>
 </body>
 </html>
