--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mcpc official site | Coming Soon</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+    <!-- ========= 
+     
+    hero section 
+     
+    ========== -->
     <section class="hero">
         <header class="header">
             <nav class="nav">
@@ -20,7 +27,7 @@
                     <li><a href="#">WORKS</a></li>
                 </ul>
             </nav>
-
+            <!-- ===== social links ===== -->
             <ul class="social-links" aria-label="Social links">
                 <li>
                     <a href="https://www.instagram.com/mcpc__official/" target="_blank">
@@ -50,6 +57,63 @@
         </div>
     </section>
 
+
+
+    <!-- ===== horizontal scroll =====-->
+     <div class="horizontal-section">
+        <div class="inner-wrapper">
+
+            <div class="panel panel-intro">
+                    <div class="comingsoon-title">
+                        <h2>SPRING 2026</h2>
+                        <h1>COMING SOON</h1>
+                    </div>
+
+                    <div class="comingsoon-text">
+                        <p>
+                            mcpc is a movement and creative collective<br>
+                            produced by mico, <br>
+                            a dancer, choreographer, and director.
+                        </p>
+                        <p>
+                            Centered around an original dance expression, <br>
+                            "Choreo-Drama", <br>
+                            mcpc creates works that capture timeless emotions <br>
+                            emerging from Shibuya - <br>
+                            a city defined by constant change.
+                        </p>
+                    </div>
+
+                    <img src="./assets/images/mcpclogo.svg" alt="mcpc logo" class="comingsoon-logo">
+            </div>
+
+            <!-- 2. Key Visual (道路画像) -->
+            <div class="panel panel-kv">
+                <div class="kv-image">
+                    <!-- ここを実際の <img> タグに置き換えてください -->
+                    <span class="kv-label">[ KEY VISUAL IMAGE ]</span>
+                </div>
+            </div>
+
+            <!-- 3. Check It -->
+            <div class="panel panel-check">
+                <h2>CHECK IT!!</h2>
+                <div class="check-box">
+                    MIDNIGHT PARTY SAVE THE DATE!!<br>
+                    のフライヤー
+                </div>
+            </div>
+
+        </div>
+     </div>
+
+
+
+    <!-- =========
+
+    coming soon section 
+
+    ========== 
     <section class="comingsoon" id="comingsoon">
         <div class="comingsoon-container">
             <div class="comingsoon-title">
@@ -79,6 +143,9 @@
             <img src="./assets/images/kv_image.jpg" alt="mcpc key visual" class="comingsoon-kvimage">
         </div>
     </section>
+----------->
+
+    <!-- ===== footer temp ===== -->
     <footer>
         <ul class="footer-social-links" aria-label="Social links">
             <li>
