--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -6,7 +6,11 @@
     <title>mcpc official site | Coming Soon</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollToPlugin.min.js"></script>
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous"/>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -28,11 +32,11 @@
         <header class="header">
             <nav class="nav">
                 <ul class="nav-links">
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">ARTIST</a></li>
-                    <li><a href="#">NEWS</a></li>  
-                    <li><a href="#">VIDEO</a></li>
-                    <li><a href="#">WORKS</a></li>
+                    <li><a href="#horizontal-section">ABOUT</a></li>
+                    <li><a href="#horizontal-section">ARTIST</a></li>
+                    <li><a href="#horizontal-section">NEWS</a></li>  
+                    <li><a href="#horizontal-section">VIDEO</a></li>
+                    <li><a href="#horizontal-section">WORKS</a></li>
                 </ul>
             </nav>
             <!-- ===== social links ===== -->
@@ -68,7 +72,7 @@
 
 
     <!-- ===== horizontal scroll =====-->
-    <section class="horizontal-section">
+    <section class="horizontal-section" id="horizontal-section">
         <div class="inner-wrapper">
             <div class="panel">
                 <div class="panel-intro">
