--- a/comingsoon copy 2/index.html
+++ b/comingsoon copy 2/index.html
@@ -91,6 +91,30 @@
                     </p>
                 </div>
                 <img src="./assets/images/logo_black_1.svg" alt="mcpc logo" class="logo-horizontal">
+                <div class="intro-social-links">
+                    <ul aria-label="Social links">
+                        <li>
+                            <a href="https://www.instagram.com/mcpc__official/" target="_blank">
+                                <i class="fa-brands fa-instagram fa-sm" style="color: black;"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/@mcpc__official" target="_blank">
+                                <i class="fa-brands fa-youtube fa-sm" style="color: black;"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.tiktok.com/@mcpcofficial?lang=en" target="_blank">
+                                <i class="fa-brands fa-tiktok fa-sm" style="color: black;"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:mcpc0927@gmail.com">
+                                <i class="fa-regular fa-envelope fa-sm" style="color: black;"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <!-- 2. Key Visual (道路画像) -->
             <div class="panel panel-kv">
@@ -98,6 +122,7 @@
             </div>
         </div>
     </section>
+    <!--
         <footer>
             <div class="footer-social-links">
                 <ul aria-label="Social links">
@@ -124,7 +149,7 @@
                 </ul>
             </div>
         </footer>
-
+    -->
 
 
     <!-- =========
