--- a/!comingsoon-sidescroll/index.html
+++ b/!comingsoon-sidescroll/index.html
@@ -71,85 +71,70 @@
 
     <!-- ===== horizontal scroll =====-->
     <section class="horizontal-section" id="horizontal-section">
-        <div class="panel">
-            <div class="panel-intro">
-                <div class="comingsoon-title">
-                    <h2>SPRING 2026</h2>
-                    <h1>COMING SOON</h1>
+        <div class="inner-wrapper">
+            <div class="panel">
+                <div class="panel-intro">
+                    <div class="comingsoon-title">
+                        <h2>SPRING 2026</h2>
+                        <h1>COMING SOON</h1>
+                    </div>
+                    <div class="comingsoon-text">
+                        <p>
+                            A Tokyo-based creative collective produced by multi-artist mico.<br>
+                            Rooted in dance and choreography, the group moves through scenes <br>
+                            including film, fashion, spatial design, and fine arts.
+                        </p>
+                        <p>
+                            By honoring timeless values in an ever-shifting era, <br>
+                            mcpc creates a distinct aesthetic where modern and retro coexist.<br>
+                            With dance at its core, each member brings a unique background and sensibility<br>
+                            —pushing beyond existing frameworks to redefine contemporary youth culture.
+                        </p>
+                    </div>
+                    <img src="./assets/images/logo_black_1.svg" alt="mcpc logo" class="logo-horizontal">
                 </div>
-                <div class="comingsoon-text">
-                    <p>
-                        A Tokyo-based creative collective produced by multi-artist mico.<br>
-                        Rooted in dance and choreography, the group moves through scenes <br>
-                        including film, fashion, spatial design, and fine arts.
-                    </p>
-                    <p>
-                        By honoring timeless values in an ever-shifting era, <br>
-                        mcpc creates a distinct aesthetic where modern and retro coexist.<br>
-                        With dance at its core, each member brings a unique background and sensibility<br>
-                        —pushing beyond existing frameworks to redefine contemporary youth culture.
-                    </p>
+                <!-- 2. Key Visual (道路画像) -->
+                <div class="panel panel-kv">
+                    <img src="./assets/images/kv.jpg" alt="key visual image">
                 </div>
-                <img src="./assets/images/logo_black_1.svg" alt="mcpc logo" class="logo-horizontal">
-                <div class="intro-social-links">
+            </div>
+            <!-- 3. Check It -->
+            <div class="panel">
+                <div class="panel-check">
+                    <h2>CHECK IT!!</h2>
+                    <div class="check-box">
+                        MIDNIGHT PARTY SAVE THE DATE!!<br>
+                        のフライヤー
+                    </div>
+                </div>
+                <div class="footer-social-links">
                     <ul aria-label="Social links">
                         <li>
                             <a href="https://www.instagram.com/mcpc__official/" target="_blank">
-                                <i class="fa-brands fa-instagram fa-sm" style="color: black;"></i>
+                                <i class="fa-brands fa-instagram fa-2xl"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.youtube.com/@mcpc__official" target="_blank">
-                                <i class="fa-brands fa-youtube fa-sm" style="color: black;"></i>
+                                <i class="fa-brands fa-youtube fa-2xl"></i>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.tiktok.com/@mcpcofficial?lang=en" target="_blank">
-                                <i class="fa-brands fa-tiktok fa-sm" style="color: black;"></i>
+                                <i class="fa-brands fa-tiktok fa-2xl"></i>
                             </a>
                         </li>
                         <li>
                             <a href="mailto:mcpc0927@gmail.com">
-                                <i class="fa-regular fa-envelope fa-sm" style="color: black;"></i>
+                                <i class="fa-regular fa-envelope fa-2xl"></i>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <!-- 2. Key Visual (道路画像) -->
-            <div class="panel panel-kv">
-                <img src="./assets/images/kv.jpg" alt="key visual image">
-            </div>
         </div>
     </section>
-    <!--
-        <footer>
-            <div class="footer-social-links">
-                <ul aria-label="Social links">
-                    <li>
-                        <a href="https://www.instagram.com/mcpc__official/" target="_blank">
-                            <i class="fa-brands fa-instagram fa-2xl"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/@mcpc__official" target="_blank">
-                            <i class="fa-brands fa-youtube fa-2xl"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.tiktok.com/@mcpcofficial?lang=en" target="_blank">
-                            <i class="fa-brands fa-tiktok fa-2xl"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:mcpc0927@gmail.com">
-                            <i class="fa-regular fa-envelope fa-2xl"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
-    -->
+
 
 
     <!-- =========
