--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -28,6 +28,12 @@
     ========== -->
     <section class="hero">
         <header class="header">
+            <button class="menu-trigger" id="menu-trigger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            
             <nav class="nav">
                 <ul class="nav-links">
                     <li><a href="#horizontal-section">ABOUT</a></li>
