--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -33,8 +33,8 @@
                 <span></span>
                 <span></span>
             </button>
-            
-            <nav class="nav">
+
+            <nav class="nav" id="nav">
                 <ul class="nav-links">
                     <li><a href="#horizontal-section">ABOUT</a></li>
                     <li><a href="#horizontal-section">ARTIST</a></li>
