--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://use.typekit.net/ldp8hkp.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style1.css">
 </head>
 <body>
     <div class="loader">
@@ -79,52 +79,38 @@
     <section class="horizontal-section" id="horizontal-section">
         <div class="panel">
             <div class="panel-intro">
-                <div class="comingsoon-title">
+                <div class="comingsoon-title reveal-item">
                     <h2>SPRING 2026</h2>
                     <h1>COMING SOON</h1>
                 </div>
                 <div class="comingsoon-text">
-                    <p>
+                    <p class="reveal-item">
                         A Tokyo-based creative collective produced by multi-artist mico.<br>
                         Rooted in dance and choreography, the group moves through scenes <br>
                         including film, fashion, spatial design, and fine arts.
                     </p>
-                    <p>
+                    <p class="reveal-item">
                         By honoring timeless values in an ever-shifting era, <br>
                         mcpc creates a distinct aesthetic where modern and retro coexist.<br>
                         With dance at its core, each member brings a unique background and sensibility<br>
                         —pushing beyond existing frameworks to redefine contemporary youth culture.
                     </p>
                 </div>
-                <img src="./assets/images/logo_black_1.svg" alt="mcpc logo" class="logo-horizontal">
-                <div class="intro-social-links">
+                <img src="./assets/images/logo_black_1.svg" alt="mcpc logo" class="logo-horizontal reveal-item">
+                <div class="intro-social-links reveal-item">
                     <ul aria-label="Social links">
-                        <li>
-                            <a href="https://www.instagram.com/mcpc__official/" target="_blank">
-                                <i class="fa-brands fa-instagram fa-sm" style="color: black;"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.youtube.com/@mcpc__official" target="_blank">
-                                <i class="fa-brands fa-youtube fa-sm" style="color: black;"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.tiktok.com/@mcpcofficial?lang=en" target="_blank">
-                                <i class="fa-brands fa-tiktok fa-sm" style="color: black;"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="mailto:mcpc0927@gmail.com">
-                                <i class="fa-regular fa-envelope fa-sm" style="color: black;"></i>
-                            </a>
-                        </li>
+                        <li><a href="https://www.instagram.com/mcpc__official/" target="_blank"><i class="fa-brands fa-instagram fa-sm" style="color: black;"></i></a></li>
+                        <li><a href="https://www.youtube.com/@mcpc__official" target="_blank"><i class="fa-brands fa-youtube fa-sm" style="color: black;"></i></a></li>
+                        <li><a href="https://www.tiktok.com/@mcpcofficial?lang=en" target="_blank"><i class="fa-brands fa-tiktok fa-sm" style="color: black;"></i></a></li>
+                        <li><a href="mailto:mcpc0927@gmail.com"><i class="fa-regular fa-envelope fa-sm" style="color: black;"></i></a></li>
                     </ul>
                 </div>
             </div>
             <!-- 2. Key Visual (道路画像) -->
             <div class="panel panel-kv">
-                <img src="./assets/images/kv.jpg" alt="key visual image">
+                <div id="main-kv-img" class="kv-container" style="width:100%; height:100%;">
+                    <img src="./assets/images/kv.jpg" alt="key visual image">
+                </div>
             </div>
         </div>
     </section>
