--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <!-- 2. Key Visual (道路画像) -->
-            <div class="panel panel-kv">
+            <div class="panel panel-kv reveal-item">
                 <div id="main-kv-img" class="kv-container" style="width:100%; height:100%;">
                     <img src="./assets/images/kv.jpg" alt="key visual image">
                 </div>
