--- a/comingsoon/index.html
+++ b/comingsoon/index.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://use.typekit.net/ldp8hkp.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="./assets/style1.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <div class="loader">
